metabase/metabase.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deploy
  labels:
    service: metabase-deploy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      service: metabase-deploy
  template:
    metadata:
      labels:
        service: metabase-deploy
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.50.36
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 1500Mi
              cpu: 600m
            limits:
              memory: 2Gi
              cpu: 800m
      volumes:
        - name: metabase-ca
          secret:
            secretName: metabase-ca
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  selector:
    service: metabase-deploy
  ports:
    - name: "main"
      port: 3000
      targetPort: 3000
