metabase/listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reporting-eol-ing-uchile-cl-https-route
  namespace: metabase
spec:
  hostnames:
  - reporting.eol-ing.uchile.cl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: metabase-listeners
      namespace: metabase
      sectionName: reporting-eol-ing-uchile-cl-https
  rules:
    - backendRefs:
        - name: metabase
          namespace: metabase
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase-http-to-https-redirect
  namespace: metabase
spec:
  parentRefs:
    - name: public-gateway
      namespace: tigera-gateway
      sectionName: http
  hostnames:
    - "reporting.eol-ing.uchile.cl"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 308
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: metabase-security-policy
  namespace: metabase
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: reporting-eol-ing-uchile-cl-https-route
  basicAuth:
    users:
      name: basic-auth
